Add notification config
